; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/t/extr_loss.c_cond_even_.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/t/extr_loss.c_cond_even_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loss_cond_t = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.loss_cond_t*)* @cond_even_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cond_even_(%struct.loss_cond_t* %0) #0 {
  %2 = alloca %struct.loss_cond_t*, align 8
  store %struct.loss_cond_t* %0, %struct.loss_cond_t** %2, align 8
  %3 = load %struct.loss_cond_t*, %struct.loss_cond_t** %2, align 8
  %4 = getelementptr inbounds %struct.loss_cond_t, %struct.loss_cond_t* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %6, align 4
  %9 = srem i32 %7, 2
  %10 = icmp eq i32 %9, 0
  %11 = zext i1 %10 to i32
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
